# blog

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yaml
blog/: Cargo.toml  bun.lockb  index.html  package.json  tailwind.config.js
blog/src/: lib.rs  main.rs  routes.rs
blog/src/routes/: _not_found.rs  home.rs  posts.rs
blog/style/: main.scss
